gen/26.1/rpk/rpk-redpanda-admin-brokers-decommission-status.adoc
= rpk redpanda admin brokers decommission-status
:description: rpk redpanda admin brokers decommission-status

Show the progress of a node decommissioning.

When a node is being decommissioned, this command reports the decommissioning
progress as follows, where PARTITION-SIZE is in bytes. Using -H, it prints the
partition size in a human-readable format.

$ rpk redpanda admin brokers decommission-status 4
DECOMMISSION PROGRESS
=====================
PARTITION                      MOVING-TO  COMPLETION-%  PARTITION-SIZE
kafka/test/0                   3          9             1699470920
kafka/test/4                   3          0             1614258779
kafka/test2/3                  3          3             2722706514
kafka/test2/4                  3          4             2945518089
kafka_internal/id_allocator/0  3          0             3562

Using --detailed / -d, it additionally prints granular reports.

$ rpk redpanda admin brokers decommission-status 4 -d
DECOMMISSION PROGRESS
=====================
PARTITION      MOVING-TO  COMPLETION-%  PARTITION-SIZE  BYTES-MOVED  BYTES-REMAINING
kafka/test/0   3          13            1731773243      228114727    1503658516
kafka/test/4   3          1             1645952961      18752660     1627200301
kafka/test2/3  3          5             2752632301      140975805    2611656496
kafka/test2/4  3          6             2975443783      181581219    2793862564

If a partition cannot be moved for some reason, the command reports the
problematic partition in the 'REALLOCATION FAILURE DETAILS' or 'ALLOCATION FAILURES'
section and decommission fails. Typical scenarios for failure include:
there are no brokers that have enough space to allocate a partition, or that can satisfy
rack constraints, etc.

REALLOCATION FAILURE DETAILS
============================
PARTITION    REASON
kafka/foo/1  Missing partition size information, all replicas may be offline
kafka/foo/7  Missing partition size information, all replicas may be offline

== Usage

[,bash]
----
rpk redpanda admin brokers decommission-status [BROKER ID] [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-d, --detailed |- |Print how much data moved and remaining in bytes.

|-h, --help |- |Help for decommission-status.

|-H, --human-readable |- |Print the partition size in a human-readable form.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--ignore-profile |- |Ignore rpk.yaml and redpanda.yaml; use default settings.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===